--- a/index.html
+++ b/index.html
@@ -6,15 +6,27 @@
     <title>MTG Standard Mechanics 2025</title>
     <script src="https://static.scryfall.com/cards/js/embed.js"></script>
     <style>
-        body { background-color: #1e1e1e; color: #ffffff; } a { color: #89ddff; } h1, h2 { color: #ffcb6b; } hr { border-color: #444; }
         body {
+            background-color: #1e1e1e;
+            color: #ffffff;
             font-family: Arial, sans-serif;
             line-height: 1.6;
             max-width: 800px;
             margin: 2rem auto;
             padding: 1rem;
         }
+        a {
+            color: #89ddff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        h1, h2 {
+            color: #ffcb6b;
+        }
         hr {
+            border-color: #444;
             margin: 2rem 0;
         }
     </style>
@@ -24,57 +36,58 @@
 
 <h2>Roles (Wilds of Eldraine)</h2>
 <p>A creature can be enchanted by a <strong>Role Aura</strong> token granting a specific bonus...<br>
-Example: <a href="https://scryfall.com/card/woe/94/gretta-sweettooth-scourge">Gretta, Sweettooth Scourge</a></p>
+Example: <a href="https://scryfall.com/card/woe/94/gretta-sweettooth-scourge" data-card-name="Gretta, Sweettooth Scourge">Gretta, Sweettooth Scourge</a></p>
 <hr>
 
 <h2>Bargain (Wilds of Eldraine)</h2>
 <p>An additional cost...<br>
-Example: <a href="https://scryfall.com/card/woe/82/beseech-the-mirror">Beseech the Mirror</a></p>
+Example: <a href="https://scryfall.com/card/woe/82/beseech-the-mirror" data-card-name="Beseech the Mirror">Beseech the Mirror</a></p>
 <hr>
 
 <h2>Celebration (Wilds of Eldraine)</h2>
 <p>An ability word...<br>
-Example: <a href="https://scryfall.com/card/woe/91/ash-party-crasher">Ash, Party Crasher</a></p>
+Example: <a href="https://scryfall.com/card/woe/91/ash-party-crasher" data-card-name="Ash, Party Crasher">Ash, Party Crasher</a></p>
 <hr>
 
 <h2>Adventures (Wilds of Eldraine)</h2>
 <p>Returning from Throne of Eldraine...<br>
-Example: <a href="https://scryfall.com/card/woe/213/kellan-the-fae-blooded">Kellan, the Fae-Blooded</a></p>
+Example: <a href="https://scryfall.com/card/woe/213/kellan-the-fae-blooded" data-card-name="Kellan, the Fae-Blooded">Kellan, the Fae-Blooded</a></p>
 <hr>
 
 <h2>Food Tokens (Wilds of Eldraine)</h2>
 <p>Also returning...<br>
-Example: <a href="https://scryfall.com/card/woe/122/sweettooth-witch">Sweettooth Witch</a></p>
+Example: <a href="https://scryfall.com/card/woe/122/sweettooth-witch" data-card-name="Sweettooth Witch">Sweettooth Witch</a></p>
 <hr>
 
 <h2>Descend X / Descended (Lost Caverns of Ixalan)</h2>
 <p>Descend N is...<br>
-Example: <a href="https://scryfall.com/card/lci/103/broodrage-mycoid">Broodrage Mycoid</a></p>
+Example: <a href="https://scryfall.com/card/lci/103/broodrage-mycoid" data-card-name="Broodrage Mycoid">Broodrage Mycoid</a></p>
 <hr>
 
 <h2>Finality Counters (Lost Caverns of Ixalan)</h2>
 <p>A new counter type...<br>
-Example: <a href="https://scryfall.com/card/lci/191/intrepid-paleontologist">Intrepid Paleontologist</a></p>
+Example: <a href="https://scryfall.com/card/lci/191/intrepid-paleontologist" data-card-name="Intrepid Paleontologist">Intrepid Paleontologist</a></p>
 <hr>
 
 <h2>Explore & Map Tokens (Lost Caverns of Ixalan)</h2>
 <p>Explore is back...<br>
-Example: <a href="https://scryfall.com/card/lci/31/relics-roar">Relic's Roar</a></p>
+Example: <a href="https://scryfall.com/card/lci/31/relics-roar" data-card-name="Relic's Roar">Relic's Roar</a></p>
 <hr>
 
 <h2>Discover (Lost Caverns of Ixalan)</h2>
 <p>Discover is like Cascade...<br>
-Example: <a href="https://scryfall.com/card/lci/122/hit-the-mother-lode">Hit the Mother Lode</a></p>
+Example: <a href="https://scryfall.com/card/lci/122/hit-the-mother-lode" data-card-name="Hit the Mother Lode">Hit the Mother Lode</a></p>
 <hr>
 
 <h2>Craft (Lost Caverns of Ixalan)</h2>
 <p>A keyword action...<br>
-Example: <a href="https://scryfall.com/card/lci/66/the-enigma-jewel">The Enigma Jewel</a> → <a href="https://scryfall.com/card/lci/66b/locus-of-enlightenment">Locus of Enlightenment</a></p>
+Example: <a href="https://scryfall.com/card/lci/66/the-enigma-jewel" data-card-name="The Enigma Jewel">The Enigma Jewel</a> → <a href="https://scryfall.com/card/lci/66b/locus-of-enlightenment" data-card-name="Locus of Enlightenment">Locus of Enlightenment</a></p>
 <hr>
 
 <h2>Disguise (Murders at Karlov Manor)</h2>
 <p>A twist on Morph...<br>
-Example: <a href="https://scryfall.com/card/mkm/18/defenestrated-phantom">Defenestrated Phantom</a></p>
+Example: <a href="https://scryfall.com/card/mkm/18/defenestrated-phantom" data-card-name="Defenestrated Phantom">Defenestrated Phantom</a></p>
+<hr>
 
 </body>
 </html>
