--- a/index.html
+++ b/index.html
@@ -36,57 +36,57 @@
 
 <h2>Roles (Wilds of Eldraine)</h2>
 <p>A creature can be enchanted by a <strong>Role Aura</strong> token granting a specific bonus...<br>
-Example: <a href="https://scryfall.com/card/woe/94/gretta-sweettooth-scourge" data-card-name="Gretta, Sweettooth Scourge">Gretta, Sweettooth Scourge</a></p>
+Example: <a href="https://scryfall.com/card/woe/94/gretta-sweettooth-scourge" class="scryfall-preview" data-card-name="Gretta, Sweettooth Scourge">Gretta, Sweettooth Scourge</a></p>
 <hr>
 
 <h2>Bargain (Wilds of Eldraine)</h2>
 <p>An additional cost...<br>
-Example: <a href="https://scryfall.com/card/woe/82/beseech-the-mirror" data-card-name="Beseech the Mirror">Beseech the Mirror</a></p>
+Example: <a href="https://scryfall.com/card/woe/82/beseech-the-mirror" class="scryfall-preview" data-card-name="Beseech the Mirror">Beseech the Mirror</a></p>
 <hr>
 
 <h2>Celebration (Wilds of Eldraine)</h2>
 <p>An ability word...<br>
-Example: <a href="https://scryfall.com/card/woe/91/ash-party-crasher" data-card-name="Ash, Party Crasher">Ash, Party Crasher</a></p>
+Example: <a href="https://scryfall.com/card/woe/91/ash-party-crasher" class="scryfall-preview" data-card-name="Ash, Party Crasher">Ash, Party Crasher</a></p>
 <hr>
 
 <h2>Adventures (Wilds of Eldraine)</h2>
 <p>Returning from Throne of Eldraine...<br>
-Example: <a href="https://scryfall.com/card/woe/213/kellan-the-fae-blooded" data-card-name="Kellan, the Fae-Blooded">Kellan, the Fae-Blooded</a></p>
+Example: <a href="https://scryfall.com/card/woe/213/kellan-the-fae-blooded" class="scryfall-preview" data-card-name="Kellan, the Fae-Blooded">Kellan, the Fae-Blooded</a></p>
 <hr>
 
 <h2>Food Tokens (Wilds of Eldraine)</h2>
 <p>Also returning...<br>
-Example: <a href="https://scryfall.com/card/woe/122/sweettooth-witch" data-card-name="Sweettooth Witch">Sweettooth Witch</a></p>
+Example: <a href="https://scryfall.com/card/woe/122/sweettooth-witch" class="scryfall-preview" data-card-name="Sweettooth Witch">Sweettooth Witch</a></p>
 <hr>
 
 <h2>Descend X / Descended (Lost Caverns of Ixalan)</h2>
 <p>Descend N is...<br>
-Example: <a href="https://scryfall.com/card/lci/103/broodrage-mycoid" data-card-name="Broodrage Mycoid">Broodrage Mycoid</a></p>
+Example: <a href="https://scryfall.com/card/lci/103/broodrage-mycoid" class="scryfall-preview" data-card-name="Broodrage Mycoid">Broodrage Mycoid</a></p>
 <hr>
 
 <h2>Finality Counters (Lost Caverns of Ixalan)</h2>
 <p>A new counter type...<br>
-Example: <a href="https://scryfall.com/card/lci/191/intrepid-paleontologist" data-card-name="Intrepid Paleontologist">Intrepid Paleontologist</a></p>
+Example: <a href="https://scryfall.com/card/lci/191/intrepid-paleontologist" class="scryfall-preview" data-card-name="Intrepid Paleontologist">Intrepid Paleontologist</a></p>
 <hr>
 
 <h2>Explore & Map Tokens (Lost Caverns of Ixalan)</h2>
 <p>Explore is back...<br>
-Example: <a href="https://scryfall.com/card/lci/31/relics-roar" data-card-name="Relic's Roar">Relic's Roar</a></p>
+Example: <a href="https://scryfall.com/card/lci/31/relics-roar" class="scryfall-preview" data-card-name="Relic's Roar">Relic's Roar</a></p>
 <hr>
 
 <h2>Discover (Lost Caverns of Ixalan)</h2>
 <p>Discover is like Cascade...<br>
-Example: <a href="https://scryfall.com/card/lci/122/hit-the-mother-lode" data-card-name="Hit the Mother Lode">Hit the Mother Lode</a></p>
+Example: <a href="https://scryfall.com/card/lci/122/hit-the-mother-lode" class="scryfall-preview" data-card-name="Hit the Mother Lode">Hit the Mother Lode</a></p>
 <hr>
 
 <h2>Craft (Lost Caverns of Ixalan)</h2>
 <p>A keyword action...<br>
-Example: <a href="https://scryfall.com/card/lci/66/the-enigma-jewel" data-card-name="The Enigma Jewel">The Enigma Jewel</a> → <a href="https://scryfall.com/card/lci/66b/locus-of-enlightenment" data-card-name="Locus of Enlightenment">Locus of Enlightenment</a></p>
+Example: <a href="https://scryfall.com/card/lci/66/the-enigma-jewel" class="scryfall-preview" data-card-name="The Enigma Jewel">The Enigma Jewel</a> → <a href="https://scryfall.com/card/lci/66b/locus-of-enlightenment" class="scryfall-preview" data-card-name="Locus of Enlightenment">Locus of Enlightenment</a></p>
 <hr>
 
 <h2>Disguise (Murders at Karlov Manor)</h2>
 <p>A twist on Morph...<br>
-Example: <a href="https://scryfall.com/card/mkm/18/defenestrated-phantom" data-card-name="Defenestrated Phantom">Defenestrated Phantom</a></p>
+Example: <a href="https://scryfall.com/card/mkm/18/defenestrated-phantom" class="scryfall-preview" data-card-name="Defenestrated Phantom">Defenestrated Phantom</a></p>
 <hr>
 
 </body>
