--- a/index.html
+++ b/index.html
@@ -35,58 +35,47 @@
 <h1>MTG Standard Mechanics 2025</h1>
 
 <h2>Roles (Wilds of Eldraine)</h2>
-<p>A creature can be enchanted by a <strong>Role Aura</strong> token granting a specific bonus...<br>
-Example: <a href="https://scryfall.com/card/woe/94/gretta-sweettooth-scourge" class="scryfall-preview" data-card-name="Gretta, Sweettooth Scourge">Gretta, Sweettooth Scourge</a></p>
+<p>Example: <a href="https://scryfall.com/card/08ed4a8b-e3d6-460a-a1ee-63e82c3ce015" class="scryfall-preview" data-scryfall-id="08ed4a8b-e3d6-460a-a1ee-63e82c3ce015">Gretta, Sweettooth Scourge</a></p>
 <hr>
 
 <h2>Bargain (Wilds of Eldraine)</h2>
-<p>An additional cost...<br>
-Example: <a href="https://scryfall.com/card/woe/82/beseech-the-mirror" class="scryfall-preview" data-card-name="Beseech the Mirror">Beseech the Mirror</a></p>
+<p>Example: <a href="https://scryfall.com/card/5f7e1fbb-21a1-46f2-a8c3-b97a89bcb42e" class="scryfall-preview" data-scryfall-id="5f7e1fbb-21a1-46f2-a8c3-b97a89bcb42e">Beseech the Mirror</a></p>
 <hr>
 
 <h2>Celebration (Wilds of Eldraine)</h2>
-<p>An ability word...<br>
-Example: <a href="https://scryfall.com/card/woe/91/ash-party-crasher" class="scryfall-preview" data-card-name="Ash, Party Crasher">Ash, Party Crasher</a></p>
+<p>Example: <a href="https://scryfall.com/card/9c9c469e-2c85-4a62-b145-7412f62c6eb3" class="scryfall-preview" data-scryfall-id="9c9c469e-2c85-4a62-b145-7412f62c6eb3">Ash, Party Crasher</a></p>
 <hr>
 
 <h2>Adventures (Wilds of Eldraine)</h2>
-<p>Returning from Throne of Eldraine...<br>
-Example: <a href="https://scryfall.com/card/woe/213/kellan-the-fae-blooded" class="scryfall-preview" data-card-name="Kellan, the Fae-Blooded">Kellan, the Fae-Blooded</a></p>
+<p>Example: <a href="https://scryfall.com/card/bd7c73ab-0c11-4d5d-8670-5291ed2ee33e" class="scryfall-preview" data-scryfall-id="bd7c73ab-0c11-4d5d-8670-5291ed2ee33e">Kellan, the Fae-Blooded</a></p>
 <hr>
 
 <h2>Food Tokens (Wilds of Eldraine)</h2>
-<p>Also returning...<br>
-Example: <a href="https://scryfall.com/card/woe/122/sweettooth-witch" class="scryfall-preview" data-card-name="Sweettooth Witch">Sweettooth Witch</a></p>
+<p>Example: <a href="https://scryfall.com/card/2d3dd83a-9d80-4c11-9e45-9603fc3e78ff" class="scryfall-preview" data-scryfall-id="2d3dd83a-9d80-4c11-9e45-9603fc3e78ff">Sweettooth Witch</a></p>
 <hr>
 
 <h2>Descend X / Descended (Lost Caverns of Ixalan)</h2>
-<p>Descend N is...<br>
-Example: <a href="https://scryfall.com/card/lci/103/broodrage-mycoid" class="scryfall-preview" data-card-name="Broodrage Mycoid">Broodrage Mycoid</a></p>
+<p>Example: <a href="https://scryfall.com/card/92080f94-441d-41d3-b3ae-4d1d7cf46e3f" class="scryfall-preview" data-scryfall-id="92080f94-441d-41d3-b3ae-4d1d7cf46e3f">Broodrage Mycoid</a></p>
 <hr>
 
 <h2>Finality Counters (Lost Caverns of Ixalan)</h2>
-<p>A new counter type...<br>
-Example: <a href="https://scryfall.com/card/lci/191/intrepid-paleontologist" class="scryfall-preview" data-card-name="Intrepid Paleontologist">Intrepid Paleontologist</a></p>
+<p>Example: <a href="https://scryfall.com/card/a9b78970-e243-4d41-89f6-52996e9939ce" class="scryfall-preview" data-scryfall-id="a9b78970-e243-4d41-89f6-52996e9939ce">Intrepid Paleontologist</a></p>
 <hr>
 
 <h2>Explore & Map Tokens (Lost Caverns of Ixalan)</h2>
-<p>Explore is back...<br>
-Example: <a href="https://scryfall.com/card/lci/31/relics-roar" class="scryfall-preview" data-card-name="Relic's Roar">Relic's Roar</a></p>
+<p>Example: <a href="https://scryfall.com/card/e9808051-df71-4cb6-8850-9c7b7192a5ac" class="scryfall-preview" data-scryfall-id="e9808051-df71-4cb6-8850-9c7b7192a5ac">Relic's Roar</a></p>
 <hr>
 
 <h2>Discover (Lost Caverns of Ixalan)</h2>
-<p>Discover is like Cascade...<br>
-Example: <a href="https://scryfall.com/card/lci/122/hit-the-mother-lode" class="scryfall-preview" data-card-name="Hit the Mother Lode">Hit the Mother Lode</a></p>
+<p>Example: <a href="https://scryfall.com/card/3a5f2899-18a1-4b32-bb66-23213a41847a" class="scryfall-preview" data-scryfall-id="3a5f2899-18a1-4b32-bb66-23213a41847a">Hit the Mother Lode</a></p>
 <hr>
 
 <h2>Craft (Lost Caverns of Ixalan)</h2>
-<p>A keyword action...<br>
-Example: <a href="https://scryfall.com/card/lci/66/the-enigma-jewel" class="scryfall-preview" data-card-name="The Enigma Jewel">The Enigma Jewel</a> → <a href="https://scryfall.com/card/lci/66b/locus-of-enlightenment" class="scryfall-preview" data-card-name="Locus of Enlightenment">Locus of Enlightenment</a></p>
+<p>Example: <a href="https://scryfall.com/card/6c2e2ed6-cf26-40e7-a2f7-e18e77fd172a" class="scryfall-preview" data-scryfall-id="6c2e2ed6-cf26-40e7-a2f7-e18e77fd172a">The Enigma Jewel</a></p>
 <hr>
 
 <h2>Disguise (Murders at Karlov Manor)</h2>
-<p>A twist on Morph...<br>
-Example: <a href="https://scryfall.com/card/mkm/18/defenestrated-phantom" class="scryfall-preview" data-card-name="Defenestrated Phantom">Defenestrated Phantom</a></p>
+<p>Example: <a href="https://scryfall.com/card/e0086a63-54d0-4c29-b558-1b36270aebd4" class="scryfall-preview" data-scryfall-id="e0086a63-54d0-4c29-b558-1b36270aebd4">Locus of Enlightenment</a></p>
 <hr>
 
 </body>
